istio/3/http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway       # use istio default controller types (Ingress Gateways,Kubernetes Ingress,Secure Gateways,Kubernetes Gateway API,Ingress Gateway without TLS Termination )
  servers:
    - port:
        number: 80
        name: http-ingress
        protocol: http
      hosts:
